# ignite

./: .env.example  .gitattributes  .gitignore  Cargo.toml  ignition.json.example  install.ps1  install.sh
.github/resources/: release-template.md
.github/workflows/: release.yml  test.yml
docs/: CONTRIBUTING.md  README.md
scripts/: install.ps1  install.sh
src/: bot.rs  config.rs  main.rs  steam.rs
