[package]
name = "ignite"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord bot framework
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Config management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Steam query protocol
a2s = "0.6"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
